# zet017tcp

./: CMakeLists.txt  COPYING  README.en.md  README.md
example/: CMakeLists.txt  example_zet017tcp.c
example/python/: README.en.md  README.md  zet017_main.py  zet017tcp.py
example_2/: CMakeLists.txt  example2_zet017tcp.c
example_2/copyonly/: devices.cfg
include/: zet017tcp.h
src/: zet017tcp.c
win32/: zet017tcp.def
